
 ** The determination of an object's dimensions, size, and shape by the
    functions ndims, rows, columns, isscalar, isvector, isrow, iscolumn,
    ismatrix, and issquare now fully depends on the function size.
    Thus, any user-defined object can ensure correct treatment by the
    aforementioned functions by properly overloading the "size"
    function.

 ** A new core function movfun will apply a function to a sliding
    window of arbitrary size on a dataset and accumulate the results.
    Many common cases have been implemented using the naming
    scheme movXXX where "XXX" is the function that will be applied.
    For example, the moving average over a dataset is movmean.
    New moving window functions:
   
    movfun   movslice
    movmad   movmax   movmean   movmedian   movmin   movprod
    movstd   movsum   movvar

 ** The functions issymmetric and ishermitian accept an option "nonskew"
    or "skew" to calculate the symmetric or skew-symmetric property
    of a matrix.  Performance has also been increased.

 ** The function isdefinite now returns true or false rather than
    -1, 0, 1.  To test for a positive semi-definite matrix (old output
    of 0) check whether the following two conditions hold:

      isdefinite (A) => 0
      isdefinite (A + 5*TOL, TOL) => 1

 ** The issorted function now uses a direction option of "ascend" or
    "descend" to make it compatible with both the sort function and
    with Matlab.  Change all uses of "ascending" and "descending" in
    existing code to the new options.

 ** The strncmp and strncmpi functions now return true if the two input
    strings match, even though the number of characters specified by N
    exceeds the string length.  This behavior more closely matches
    common sense and is Matlab compatible.  Example:

      Octave 5.0 : strncmp ("abc", "abc", 100) => true
      Previously : strncmp ("abc", "abc", 100) => false

 ** The intmax, intmin, and flintmax functions now accept a variable